# devquest

./: .gitignore  .pdm-python  README.md  index.html  pyproject.toml  requirements.txt  script.js  style.css  tutorials.csv
htmls/: DSA-01_-_Basic_Python.html  Multipitch_Tracker-[2011]_HMM-Based_Multipitch_Tracking_for_Noisy_and_Reverberant_Speech.html  Music_Similarity_Analyzer-Transformer.html  Vocal_Pitch_Range_Analyzer-Transformer.html  template.html
notebooks/: Multipitch_Tracker-[2011]_HMM-Based_Multipitch_Tracking_for_Noisy_and_Reverberant_Speech.ipynb  Music_Similarity_Analyzer-[2021]_Contrastive_Learning_of_Musical_Representations.ipynb  PAPER-_[2017]_On_Musical_Onset_Detection_via_the_S-Transform.ipynb  Tempo_And_Beat_Detector-_[2018]_On_Musical_Onset_Detection_via_the_S-Transform.ipynb  Vocal_Pitch_Range_Analyzer-Transformer.ipynb  [Topic]_Transformer-Building_Transformer_From_Scratch.ipynb
notebooks/utils/: __init__.py  dutil.py
