[project]
name = "DevQuest"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ankit Anand", email = "ankit0.anand0@gmail.com"},
]
dependencies = ["modusa>=0.3.42", "jupyter>=1.1.1", "ipykernel>=6.30.1", "praat-parselmouth>=0.4.6", "sounddevice>=0.5.2", "pyworld>=0.3.5", "pyreaper>=0.0.11", "matplotlib-venn>=1.1.2", "pandas>=2.3.2", "pyloudnorm>=0.1.1", "stockwell>=1.2"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
